# protein_information_project

./: .gitignore  README.md  install_dependencies.sh  pyproject.toml  requirements.txt  run.py  run_test.py  test_data_loader.py
data/: go_term_nodes.parquet
project_notes/: data_structure.md  execution_flow.md  installation_guide.md  project_summary.txt
src/: app.py
src/components/: __init__.py  go_term_card.py  layout.py  protein_card.py  search.py
src/data/: inspect.py  loader.py
src/pages/: __init__.py  about.py  go_term_detail.py  home.py  protein_detail.py  search_results.py
src/utils/: logging.py
tests/exploratory/: debug_search.py  find_search_terms.py  inspect_data.py  minimal_test.py  verify_search_fix.py
