[tool.poetry]
name = "protein_information_project"
version = "0.1.0"
description = "Protein information application for Biographica take-home task"
authors = ["Marcelo Amorelli <kornexl9@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
dash = "^2.13.0"
pandas = "^2.0.0"
duckdb = "^1.2.0"
plotly = "^5.15.0"
dash-bootstrap-components = "^1.5.0"
numpy = ">=1.22.0,<2.0.0"
loguru = "^0.7.2"
dash-cytoscape = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
